--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -1,3 +1,127 @@
+@font-face {
+  font-family: "Rucksack";
+  font-weight: 400;
+  src: url(/static/fonts/rucksack-bold-webfont.065f637.woff);
+}
+
+@font-face {
+  font-family: "Rucksack";
+  font-weight: 300;
+  src: url(/static/fonts/rucksack-demi-webfont.325c8ab.woff);
+}
+
+@font-face {
+  font-family: "Rucksack";
+  font-weight: 200;
+  src: url(/static/fonts/rucksack-book-webfont.a667fb0.woff);
+}
+
+@font-face {
+  font-family: "Assistant";
+  font-style: normal;
+  font-weight: 400;
+  src: url(/static/fonts/assistant-v6-latin-regular.d2412c7.eot);
+  src: local(""),
+    url(/static/fonts/assistant-v6-latin-regular.a777c35.woff2) format("woff2"),
+    url(/static/fonts/assistant-v6-latin-regular.754f017.woff) format("woff"),
+    url(/static/fonts/assistant-v6-latin-regular.cfe0636.ttf) format("truetype"),
+    url(/static/img/assistant-v6-latin-regular.7659cc0.svg#Assistant)
+      format("svg");
+}
+
+@font-face {
+  font-family: "Assistant";
+  font-style: normal;
+  font-weight: 700;
+  src: url(/static/fonts/assistant-v6-latin-700.cfa63c3.eot);
+  src: local(""),
+    url(/static/fonts/assistant-v6-latin-700.10cc61b.woff2) format("woff2"),
+    url(/static/fonts/assistant-v6-latin-700.d243372.woff) format("woff"),
+    url(/static/fonts/assistant-v6-latin-700.90ceeee.ttf) format("truetype"),
+    url(/static/fonts/assistant-v6-latin-700.30c87ad.svg#Assistant)
+      format("svg");
+}
+
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html,
 body {
-  font-family: sans-serif;
+  margin: 0;
+}
+
+body {
+  font-family: "Assistant", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  color: #404141;
+}
+
+a {
+  color: #404141;
+  text-decoration: underline;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+header #top {
+  height: 3em;
+  background-color: #404141;
+}
+
+header #logo {
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+header img#logo {
+  max-width: 200px;
+}
+
+.container {
+  max-width: 960px;
+  padding-right: 12px;
+  padding-left: 12px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+nav {
+  font-family: "Rucksack";
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav ul li {
+  display: inline;
+}
+
+nav ul li a {
+  padding: 0.75rem 0.375rem;
+  font-family: "Rucksack";
+  color: #404141;
+  text-decoration: none;
+}
+
+nav ul li a.active {
+  text-decoration: underline;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
 }
