--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -54,6 +54,7 @@ html {
 html,
 body {
   margin: 0;
+  height: 100%;
 }
 
 body {
@@ -71,6 +72,27 @@ a {
 a:hover {
   text-decoration: none;
 }
+
+/* Core layout */
+#content {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#content header {
+}
+
+#content main {
+  flex: 1 0 auto;
+}
+
+
+#content footer {
+}
+
+/* Header */
 
 header #top {
   color: white;
@@ -94,11 +116,30 @@ header #top a.btn {
 header .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
-header img#logo {
-  max-width: 200px;
+header img.logo {
+  max-width: 150px;
+  object-fit: contain;
 }
+
+/* Footer */
+
+footer {
+  background-color: #404141;
+}
+
+footer .container {
+padding-top: 3rem;
+padding-bottom: 3rem;
+}
+
+footer .container img.logo {
+  max-width: 150px;
+}
+
+/* Content */
 
 .container {
   max-width: 960px;
@@ -150,4 +191,59 @@ nav ul li a.active {
 
 nav ul li a:hover {
   text-decoration: underline;
+}
+
+/* Landing page */
+
+.landing {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+@media (max-width: 500px) {
+  .landing {
+    flex-direction: column;
+  }
+}
+
+.landing section {
+  padding: 1rem;
+  text-align: center;
+  border: 1px solid lightgray;
+  margin: 1rem;
+}
+
+.landing section h1 a {
+  text-decoration: none;
+}
+
+/* Home page */
+
+section.hero {
+  background-color: #f1814f;
+  background-image: url("/static/img/home_banner.png");
+  background-position: center;
+  background-size: cover;
+  min-height: 390px;
+  padding: 1rem;
+}
+
+section.hero .prose {
+  padding: 1rem;
+  max-width: 50%;
+}
+
+section.hero .prose h1 {
+  font-size: 3rem;
+  font-family: "Rucksack";
+}
+
+@media (max-width: 500px) {
+  section.hero {
+    background-image: none;
+  }
+
+  section.hero .prose {
+    max-width: 100%;
+  }
 }
