Initial layerswitcher and popup

--- a/website/src/_includes/map.njk
+++ b/website/src/_includes/map.njk
@@ -44,6 +44,14 @@
       'zoom_out': {
         'en': 'Zoom out',
         'cy': 'Chwyddo allan'
+      },
+      'paths': {
+        'en': 'Paths',
+        'cy': 'Llwybrau'
+      },
+      'areas': {
+        'en': 'Areas',
+        'cy': 'Arwynebeddau'
       }
     }
   });
