Allow the map to be full width and fancy nav underline

--- a/website/src/_includes/map.njk
+++ b/website/src/_includes/map.njk
@@ -12,16 +12,21 @@
     height: 100%;
   }
 
-  main {
-    height: 100%;
-  }
-
   main .container {
     height: 100%;
   }
 
+  footer {
+    display: none;
+  }
+
   div#map {
     height: 100%;
+  }
+
+  /* Allow the map page to use full width */
+  .container {
+    max-width: 100%;
   }
 </style>
 {% endblock %}
