--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -75,10 +75,10 @@ a:hover {
 
 /* Core layout */
 #content {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #content header {
@@ -87,7 +87,6 @@ a:hover {
 #content main {
   flex: 1 0 auto;
 }
-
 
 #content footer {
 }
@@ -131,8 +130,8 @@ footer {
 }
 
 footer .container {
-padding-top: 3rem;
-padding-bottom: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 footer .container img.logo {
@@ -179,18 +178,37 @@ nav ul li {
 }
 
 nav ul li a {
-  padding: 0.75rem 0.375rem;
+  /* relative position is required for the fancy underline on the active link */
+  position: relative;
+  margin: 0 0.375rem;
+  padding: 0 0.375rem;
   font-family: "Rucksack";
-  color: #404141;
+  color: black;
   text-decoration: none;
 }
 
 nav ul li a.active {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 nav ul li a:hover {
   text-decoration: underline;
+}
+
+nav ul li a.active:hover {
+  text-decoration: none;
+}
+
+nav ul li a.active:after {
+  content: "";
+  position: absolute;
+  bottom: 0.1rem;
+  left: 0;
+  right: 0;
+  top: auto;
+  height: 0.25rem;
+  background: #fe7a42;
+  z-index: -1;
 }
 
 /* Landing page */
