Add map state, intermediate click handler, and Communities layer title

--- a/website/src/_includes/map.njk
+++ b/website/src/_includes/map.njk
@@ -57,6 +57,10 @@
       'areas': {
         'en': 'Areas',
         'cy': 'Arwynebeddau'
+      },
+      'communities': {
+        'en': 'Communities',
+        'cy': 'Cymunedau'
       }
     }
   });
