--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -130,8 +130,17 @@ footer {
 }
 
 footer .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 footer img.logo {
@@ -142,12 +151,6 @@ footer .social {
   margin-top: 1em;
 }
 
-footer .social ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 footer .social li {
   display: inline;
   padding: 0 0.75em;
@@ -156,6 +159,10 @@ footer .social li {
 footer svg.icon {
   width: 24px;
   height: 24px;
+}
+
+footer .links a {
+  color: white;
 }
 
 /* Content */
