--- a/website/src/_includes/map.njk
+++ b/website/src/_includes/map.njk
@@ -38,6 +38,7 @@
   const map = new PathsToWellbeingMap({
     target: 'map',
     lang: '{{ locale }}',
+    staticUrl: '/static/data/',
     // TODO We probably don't need to pass both languages, we could just pass the current language?
     // Use the same format as https://github.com/adamduncan/eleventy-plugin-i18n
     // for translations
