--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/static/css/common.css" />
     {% block head %}{% endblock %}
-    <title>{{ title }} - {{ 'Paths to Wellbeing' | i18n }}</title>
+    <title>{{ title }} - {{ 'Paths to Wellbeing' | i18n(null, locale) }}</title>
   </head>
   <body>
     <div id="content">
@@ -15,7 +15,7 @@
           <div class="container">
             <h1>
               <a href="/{{ locale + '/' if currentLanguage else '' }}"
-                >{{ 'Paths to Wellbeing' | i18n }}</a
+                >{{ 'Paths to Wellbeing' | i18n(null, locale) }}</a
               >
             </h1>
             {% if currentLanguage %}
@@ -45,19 +45,19 @@
               {% set url %}/{{ locale }}/{% endset %}
               <li>
                 <a href="{{ url }}" class="{{ 'active' if url === page.url }}"
-                  >{{ 'Home' | i18n }}</a
+                  >{{ 'Home' | i18n(null, locale) }}</a
                 >
               </li>
               {% set url %}/{{ locale }}/about/{% endset %}
               <li>
                 <a href="{{ url }}" class="{{ 'active' if url === page.url }}"
-                  >{{ 'About' | i18n }}</a
+                  >{{ 'About' | i18n(null, locale) }}</a
                 >
               </li>
               {% set url %}/{{ locale }}/map/{% endset %}
               <li>
                 <a href="{{ url }}" class="{{ 'active' if url === page.url }}"
-                  >{{ 'Map' | i18n }}</a
+                  >{{ 'Map' | i18n(null, locale) }}</a
                 >
               </li>
             </ul>
@@ -85,8 +85,8 @@
                     href="https://en-gb.facebook.com/RamblersCymru/"
                     rel="noopener"
                     target="_blank"
-                    aria-label="{{ 'Visit Facebook' | i18n }}"
-                    title="{{ 'Visit Facebook' | i18n }}"
+                    aria-label="{{ 'Visit Facebook' | i18n(null, locale) }}"
+                    title="{{ 'Visit Facebook' | i18n(null, locale) }}"
                   >
                     <svg
                       class="icon"
@@ -107,8 +107,8 @@
                     href="https://twitter.com/ramblerscymru/"
                     rel="noopener"
                     target="_blank"
-                    aria-label="{{ 'Visit Twitter' | i18n }}"
-                    title="{{ 'Visit Twitter' | i18n }}"
+                    aria-label="{{ 'Visit Twitter' | i18n(null, locale) }}"
+                    title="{{ 'Visit Twitter' | i18n(null, locale) }}"
                   >
                     <svg
                       class="icon"
@@ -129,8 +129,8 @@
                     href="https://www.instagram.com/ramblers_cymru/"
                     rel="noopener"
                     target="_blank"
-                    aria-label="{{ 'Visit Instagram' | i18n }}"
-                    title="{{ 'Visit Instagram' | i18n }}"
+                    aria-label="{{ 'Visit Instagram' | i18n(null, locale) }}"
+                    title="{{ 'Visit Instagram' | i18n(null, locale) }}"
                   >
                     <svg
                       class="icon"
