Rework state handling
Remove the need for this.state, instead:
* Use zoom thresholds to determine if the communities or routes should be shown
* Determine route style based on this.selectedRoute, this.clickRouteUid
  and this.hoverRouteUid
    * Currently there are two highlight styles orange for 'selected' and
      'yellow' for click/hover
    * When a route is selected the other routes have a lower opacity so
      they are muted
    * When a route is selected it's styles are given a zIndex of 1 so
      the route displays above other routes

--- a/website/src/_includes/map.njk
+++ b/website/src/_includes/map.njk
@@ -41,5 +41,7 @@
     staticUrl: '/static/data/',
     translations: {{ translations | dropOtherLocales(locale) | json | safe }}
   });
+  // TODO Remove me
+  window.map = map;
 </script>
 {% endblock %}
