--- a/map/src/map.css
+++ b/map/src/map.css
@@ -36,6 +36,31 @@
   margin-bottom: 0.5em;
 }
 
+.app .map .ol-popup ul li.pathDifficulty-EasyAccess {
+  border-left: 15px solid rgba(35,200,35,1.0);
+  padding-left: 0.5em;
+}
+
+.app .map .ol-popup ul li.pathDifficulty-Leisurely {
+  border-left: 15px solid rgba(35,35,200,1.0);
+  padding-left: 0.5em;
+}
+
+.app .map .ol-popup ul li.pathDifficulty-Easy {
+  border-left: 15px solid rgba(35,200,200,1.0);
+  padding-left: 0.5em;
+}
+
+.app .map .ol-popup ul li.pathDifficulty-Moderate {
+  border-left: 15px solid rgba(200,200,35,1.0);
+  padding-left: 0.5em;
+}
+
+.app .map .ol-popup ul li.pathDifficulty-Strenuous {
+  border-left: 15px solid rgba(200,35,35,1.0);
+  padding-left: 0.5em;
+}
+
 .app .map .ol-popup ul li:after {
   content: ' >';
 }
