Material icons (needs GFonts link in .njk)

--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/static/css/common.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     {% block head %}{% endblock %}
     <title>{{ title }} - {{ 'Paths to Wellbeing' | i18n(null, locale) }}</title>
   </head>
