Pointer cursor on hover (WIP: flicker)

--- a/map/src/map.css
+++ b/map/src/map.css
@@ -1,5 +1,13 @@
 @import "../node_modules/ol/ol.css";
 
+.hover-pointer {
+  cursor: pointer;
+}
+
+.normal-pointer {
+  cursor: auto;
+}
+
 .app {
     display: flex;
     flex-direction: row;
