--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -55,10 +55,10 @@
                   >{{ 'About' | i18n(null, locale) }}</a
                 >
               </li>
-              {% set url %}/{{ locale }}/map/{% endset %}
+              {% set url %}/{{ locale }}/routes/{% endset %}
               <li>
                 <a href="{{ url }}" class="{{ 'active' if url === page.url }}"
-                  >{{ 'Map' | i18n(null, locale) }}</a
+                  >{{ 'Routes' | i18n(null, locale) }}</a
                 >
               </li>
             </ul>
