--- a/map/src/map.css
+++ b/map/src/map.css
@@ -61,83 +61,59 @@
   border-left: 3px solid white;
 }
 
-.app .map .ol-popup ul li.pathDifficulty-EasyAccess > div > div {
+.app .map .ol-popup ul li.pathFamilyFriendly-true > div > div {
+  background-color: rgba(51,204,51,0.1);
+}
+
+.app .map .ol-popup ul li.pathFamilyFriendly-false > div > div {
+  background-color: rgba(51,51,204,0.1);
+}
+
+.app .map .ol-popup ul li.pathDifficulty-a > div > div {
   background-color: rgba(35,200,35,0.1);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-Leisurely > div > div {
-  background-color: rgba(35,35,200,0.1);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Easy > div > div {
+.app .map .ol-popup ul li.pathDifficulty-b > div > div {
   background-color: rgba(35,200,200,0.1);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-Moderate > div > div {
-  background-color: rgba(200,200,35,0.1);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Strenuous > div > div {
- background-color: rgba(200,35,35,0.1);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-EasyAccess > div > div:first-child {
-  border-left: 10px solid rgba(35,200,35,1.0);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Leisurely > div > div:first-child {
-  border-left: 10px solid rgba(35,35,200,1.0);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Easy > div > div:first-child {
-  border-left: 10px solid rgba(35,200,200,1.0);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Moderate > div > div:first-child {
-  border-left: 10px solid rgba(200,200,35,1.0);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Strenuous > div > div:first-child {
-  border-left: 10px solid rgba(200,35,35,1.0);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-MynediadHawdd > div > div {
-  background-color: rgba(35,200,35,0.1);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Hamddenol > div > div {
+.app .map .ol-popup ul li.pathDifficulty-c > div > div {
   background-color: rgba(35,35,200,0.1);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-Hawdd > div > div {
-  background-color: rgba(35,200,200,0.1);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Cymedrol > div > div {
+.app .map .ol-popup ul li.pathDifficulty-d > div > div {
   background-color: rgba(200,200,35,0.1);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-Egnïol > div > div {
+.app .map .ol-popup ul li.pathDifficulty-e > div > div {
  background-color: rgba(200,35,35,0.1);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-MynediadHawdd > div > div:first-child {
+.app .map .ol-popup ul li.pathFamilyFriendly-true > div > div:first-child {
+  border-left: 10px solid rgba(51,204,51);
+}
+
+.app .map .ol-popup ul li.pathFamilyFriendly-false > div > div:first-child {
+  border-left: 10px solid rgba(51,51,204);
+}
+
+.app .map .ol-popup ul li.pathDifficulty-a > div > div:first-child {
   border-left: 10px solid rgba(35,200,35,1.0);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-Hamddenol > div > div:first-child {
-  border-left: 10px solid rgba(35,35,200,1.0);
-}
-
-.app .map .ol-popup ul li.pathDifficulty-Hawdd > div > div:first-child {
+.app .map .ol-popup ul li.pathDifficulty-b > div > div:first-child {
   border-left: 10px solid rgba(35,200,200,1.0);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-Cymedrol > div > div:first-child {
+.app .map .ol-popup ul li.pathDifficulty-c > div > div:first-child {
+  border-left: 10px solid rgba(35,35,200,1.0);
+}
+
+.app .map .ol-popup ul li.pathDifficulty-d > div > div:first-child {
   border-left: 10px solid rgba(200,200,35,1.0);
 }
 
-.app .map .ol-popup ul li.pathDifficulty-Egnïol > div > div:first-child {
+.app .map .ol-popup ul li.pathDifficulty-e > div > div:first-child {
   border-left: 10px solid rgba(200,35,35,1.0);
 }
 
