--- a/map/src/map.css
+++ b/map/src/map.css
@@ -8,6 +8,38 @@
   cursor: auto;
 }
 
+input[type=radio] {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  white-space: nowrap;
+  width: 1px;
+}
+
+input[type=radio] + label {
+  background: rgba(231,231,231,1);
+  font-weight: bold;
+}
+
+input[type=radio]:checked + label {
+  background: rgba(249,177,4,1);
+}
+
+form {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+form label {
+  display: inline-block;
+  width: 40%;
+  text-align: center;
+  padding: 1em;
+}
+
 .app {
     display: flex;
     flex-direction: row;
