--- a/map/src/map.css
+++ b/map/src/map.css
@@ -1,91 +1,5 @@
 @import "../node_modules/ol/ol.css";
 
-.hover-pointer {
-  cursor: pointer;
-}
-
-.normal-pointer {
-  cursor: auto;
-}
-
-input[type=radio] {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  white-space: nowrap;
-  width: 1px;
-}
-
-input[type=radio] + label {
-  background: rgba(231,231,231,1);
-  font-weight: bold;
-  cursor: pointer;
-}
-
-input[type=radio]:checked + label {
-  background: rgba(249,177,4,1);
-  cursor: auto;
-}
-
-form {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-form label {
-  display: inline-block;
-  width: 40%;
-  text-align: center;
-  padding: 1em;
-}
-
-.filterLegend {
-  width: 40%;
-  margin-top: 2em;
-}
-
-.filterLegend td {
-  padding: .5em;
-}
-
-.filterLegend .familyfriendly-true {
-  border-left: 10px solid rgba(51,204,51);
-  background-color: rgba(51,204,51,0.1);
-}
-
-.filterLegend .familyfriendly-false {
-  border-left: 10px solid rgba(51,51,204);
-  background-color: rgba(51,51,204,0.1);
-}
-
-.filterLegend .difficulty-a {
-  border-left: 10px solid rgba(35,200,35);
-  background-color: rgba(35,200,35,0.1);
-}
-
-.filterLegend .difficulty-b {
-  border-left: 10px solid rgba(35,200,200);
-  background-color: rgba(35,200,200,0.1);
-}
-
-.filterLegend .difficulty-c {
-  border-left: 10px solid rgba(35,35,200);
-  background-color: rgba(35,35,200,0.1);
-}
-
-.filterLegend .difficulty-d {
-  border-left: 10px solid rgba(200,200,35);
-  background-color: rgba(200,200,35,0.1);
-}
-
-.filterLegend .difficulty-e {
-  border-left: 10px solid rgba(200,35,35);
-  background-color: rgba(200,35,35,0.1);
-}
-
 .app {
     display: flex;
     flex-direction: row;
@@ -223,6 +137,93 @@ form label {
   padding-top: 0.25em;
   vertical-align: middle;
   color: #999;
+}
+
+.hover-pointer {
+  cursor: pointer;
+}
+
+.normal-pointer {
+  cursor: auto;
+}
+
+.filter-panel input[type=radio] {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.filter-panel input[type=radio] + label {
+  background: rgba(231,231,231,1);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.filter-panel input[type=radio]:checked + label {
+  background: rgba(249,177,4,1);
+  cursor: auto;
+}
+
+.filter-panel form {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+}
+
+.filter-panel form label {
+  display: inline-block;
+  width: 40%;
+  text-align: center;
+  padding: 1em;
+}
+
+.filterLegend {
+  width: 40%;
+  margin-top: 2em;
+}
+
+.filterLegend td {
+  padding: .5em;
+}
+
+.filterLegend .familyfriendly-true {
+  border-left: 10px solid rgba(51,204,51);
+  background-color: rgba(51,204,51,0.1);
+}
+
+.filterLegend .familyfriendly-false {
+  border-left: 10px solid rgba(51,51,204);
+  background-color: rgba(51,51,204,0.1);
+}
+
+.filterLegend .difficulty-a {
+  border-left: 10px solid rgba(35,200,35);
+  background-color: rgba(35,200,35,0.1);
+}
+
+.filterLegend .difficulty-b {
+  border-left: 10px solid rgba(35,200,200);
+  background-color: rgba(35,200,200,0.1);
+}
+
+.filterLegend .difficulty-c {
+  border-left: 10px solid rgba(35,35,200);
+  background-color: rgba(35,35,200,0.1);
+}
+
+.filterLegend .difficulty-d {
+  border-left: 10px solid rgba(200,200,35);
+  background-color: rgba(200,200,35,0.1);
+}
+
+.filterLegend .difficulty-e {
+  border-left: 10px solid rgba(200,35,35);
+  background-color: rgba(200,35,35,0.1);
 }
 
 .tooltipped {
