--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -181,5 +181,6 @@
         </div>
       </footer>
     </div>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
