Improve nav layout on smaller screens

--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -198,6 +198,8 @@ nav {
 
 nav ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
@@ -236,6 +238,12 @@ nav ul li a.active:after {
   height: 0.25rem;
   background: #fe7a42;
   z-index: -1;
+}
+
+@media (max-width: 600px) {
+  nav ul li {
+    display: inherit;
+  }
 }
 
 /* General page styles */
