Initial English content

--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -64,7 +64,7 @@
               {% set url %}/{{ locale }}/contact/{% endset %}
               <li>
                 <a href="{{ url }}" class="{{ 'active' if url === page.url }}"
-                  >{{ 'Contact Us' | i18n(null, locale) }}</a
+                  >{{ 'Contact' | i18n(null, locale) }}</a
                 >
               </li>
             </ul>
