tagline and paths added to info panel

--- a/map/src/map.css
+++ b/map/src/map.css
@@ -178,7 +178,7 @@
     justify-content: space-between;
 }
 
-.info-panel header p {
+.info-panel header p:first-child {
   margin: 0;
   color: #999;
 }
