--- a/map/src/map.css
+++ b/map/src/map.css
@@ -61,11 +61,20 @@
   margin-right: 0.5em;
 }
 
+.app .map .ol-popup ul li img {
+  padding-top: 0.25em;
+}
+
 .app .map .ol-popup ul li > div > div {
   display: inline-block;
   margin-top: 0.5em;
   padding: 0.5em;
   padding-top: 1em;
+}
+
+.app .map .ol-popup ul li > div > div img {
+  vertical-align: middle;
+  padding-bottom: 0.25em;
 }
 
 .app .map .ol-popup ul li > div > div:first-child {
@@ -152,7 +161,7 @@
   text-decoration: underline;
 }
 
-.app .map .ol-popup ul li .distance, .app .map .ol-popup ul li .ascent {
+.app .map .ol-popup ul li .distance, .app .map .ol-popup ul li .time {
   padding-top: 0.25em;
   vertical-align: middle;
   color: #999;
