Content and style update

--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -156,33 +156,43 @@
               </ul>
             </div>
           </div>
-          <div class="links">
-            <ul>
-              <li>
-                <a
-                  href="https://www.ramblers.org.uk/technical-stuff/privacy-policy.aspx"
-                  rel="noopener"
-                  target="_blank"
-                  >Privacy Policy</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.ramblers.org.uk/technical-stuff/terms-and-conditions.aspx"
-                  rel="noopener"
-                  target="_blank"
-                  >Terms and Conditions</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.ramblers.org.uk/technical-stuff/use-of-cookies.aspx"
-                  rel="noopener"
-                  target="_blank"
-                  >Cookie Policy</a
-                >
-              </li>
-            </ul>
+          <div>
+            <h2>Funded by</h2>
+            <div class="supporter-logos">
+              <img src="/static/img/ppl_logo.png" alt="Peoples Postcode Lottery Logo" />
+              <img src="/static/img/eafrd_logo.jpg" alt="Welsh Government Logo" />
+            </div>
+          </div>
+          <div>
+            <h2>Legals</h2>
+            <div class="links">
+              <ul>
+                <li>
+                  <a
+                    href="https://www.ramblers.org.uk/technical-stuff/privacy-policy.aspx"
+                    rel="noopener"
+                    target="_blank"
+                    >Privacy Policy</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.ramblers.org.uk/technical-stuff/terms-and-conditions.aspx"
+                    rel="noopener"
+                    target="_blank"
+                    >Terms and Conditions</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.ramblers.org.uk/technical-stuff/use-of-cookies.aspx"
+                    rel="noopener"
+                    target="_blank"
+                    >Cookie Policy</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </footer>
