--- a/map/src/map.css
+++ b/map/src/map.css
@@ -50,6 +50,11 @@
   min-width: 250px;
 }
 
+.app .map .ol-popup .ol-popup-closer {
+  font-size: initial;
+  padding: 0;
+}
+
 .app .map .ol-popup ul {
   list-style-type: none;
   padding-left: 0em;
@@ -132,12 +137,9 @@
   layout: flex;
 }
 
-/* .app .map .ol-popup ul li a:after {
-  content: ' >';
-} */
-
 .app .map .ol-popup ul a {
-  font-size: 14pt;
+  font-size: 1rem;
+  font-family: "Rucksack";
 }
 
 .app .map .ol-popup ul a:after {
@@ -164,6 +166,16 @@
 
 .normal-pointer {
   cursor: auto;
+}
+
+/* Page styles */
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 /* Panels */
