--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -61,7 +61,10 @@ body {
   font-family: "Assistant", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  line-height: 1.5;
   color: #404141;
+  background-color: #f9f9f9;
 }
 
 a {
@@ -146,14 +149,24 @@ footer .container {
   padding-bottom: 3rem;
 }
 
+footer .container h2 {
+    color: #9bc8ab;
+    text-align: center;
+    font-size: 1.125rem;
+    font-family: "Rucksack";
+    margin-top: 0;
+}
+
 footer ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 footer img.logo {
-  max-width: 150px;
+  max-width: 200px;
+  width: 100%;
 }
 
 footer .social {
@@ -174,6 +187,19 @@ footer .links a {
   color: white;
 }
 
+footer .supporter-logos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+footer .supporter-logos img {
+  width: 100%;
+  max-width: 200px;
+  padding: 1rem;
+}
+
 /* Content */
 
 .container {
@@ -186,10 +212,53 @@ footer .links a {
   padding-bottom: 12px;
 }
 
+.box {
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.box .inner {
+    padding: 3rem;
+    border-top: 1ex solid #eee;
+    max-width: 66.66666667%;
+    background-color: white;
+}
+
+@media (max-width: 600px) {
+  .box .inner {
+    max-width: 100%;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-family: "Rucksack";
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
 /* Controls */
 
 a.btn {
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: bold;
   padding: 0.5rem;
   border: 1px solid #f9b104;
@@ -258,8 +327,8 @@ nav ul li a.active:after {
 /* General page styles */
 
 .social-embed {
-  padding: 0 1em 1em 1em;
-  width: 400px;
+  width: 100%;
+  margin: 2rem 0;
 }
 
 @media (max-width: 500px) {
@@ -306,23 +375,40 @@ nav ul li a.active:after {
 .landing section {
   padding: 1rem;
   text-align: center;
-  border: 1px solid lightgray;
+  /* border: 1px solid lightgray; */
   margin: 1rem;
+  background-color: white;
+  border-top: 1ex solid #eee;
 }
 
-.landing section h1 a {
+.landing section h2 a {
   text-decoration: none;
+  font-size: 2.5rem;
+  font-family: "Rucksack";
 }
 
-/* Home page */
+/* Hero */
 
 section.hero {
-  background-color: #f1814f;
-  background-image: url("/static/img/home_banner.png");
   background-position: center;
   background-size: cover;
   min-height: 390px;
   padding: 1rem;
+}
+
+section.hero.home {
+  background-image: url("/static/img/home_banner.png");
+  background-color: #f1814f;
+}
+
+section.hero.about {
+  background-image: url("/static/img/about_banner.png");
+  background-color: #F9B104;
+}
+
+section.hero.contact {
+  background-image: url("/static/img/contact_banner.png");
+  background-color: #F9C8AB;
 }
 
 section.hero .prose {
@@ -330,18 +416,17 @@ section.hero .prose {
   max-width: 50%;
 }
 
-section.hero .prose h1 {
-  font-size: 3rem;
-  font-family: "Rucksack";
+section.hero .prose h2 {
+  font-size: 2rem;
 }
 
 section.hero .prose p {
-  color: white;
+  font-size: 1.2rem;
 }
 
 @media (max-width: 500px) {
   section.hero {
-    background-image: none;
+    background-image: none !important;
   }
 
   section.hero .prose {
@@ -351,23 +436,6 @@ section.hero .prose p {
 
 /* About page */
 
-.about-header {
-  background-image: url("/static/img/about_header.jpg");
-}
-
-.about-header p {
-  padding: 0 1rem;
-}
-
-.about-header h1 {
-  margin-top: 0;
-  padding: 1rem 1rem 0 1rem;
-}
-
-.about-header img {
-  width: 100%;
-}
-
 .communities {
   display: flex;
   flex-wrap: wrap;
@@ -375,17 +443,15 @@ section.hero .prose p {
 }
 
 .communities section {
-  flex: 0 1 calc(50% - 1em);
-  padding: 1em;
+  border-top: 1ex solid #eee;
+  background-color: white;
+  flex: 0 1 calc(50% - 2rem);
+  padding: 1rem;
+  margin: 1rem;
 }
 
-.supporter-logos {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.supporter-logos img {
-  height: 100px;
-  padding: 0.25em;
+@media (max-width: 500px) {
+  .communities section {
+    flex: auto;
+  }
 }
