--- a/map/src/map.css
+++ b/map/src/map.css
@@ -354,31 +354,35 @@
   background-color: rgba(200,35,35,0.1);
 }
 
-.layer-switcher {
+#map .layer-switcher {
     top: 0.5rem;
     right: 0.5rem;
 }
 
-.layer-switcher ul {
+#map .layer-switcher ul {
     padding: 0;
     margin: 0;
 }
 
-.layer-switcher li {
+#map .layer-switcher li {
     padding: 0;
     margin: 0;
 }
 
-.layer-switcher .panel {
+#map .layer-switcher .panel ul li label:hover {
+    cursor: pointer;
+}
+
+#map .layer-switcher .panel {
     background-color: transparent;
     border: 0;
 }
 
-.layer-switcher li input {
+#map .layer-switcher li input {
     display: none;
 }
 
-.layer-switcher li label {
+#map .layer-switcher li label {
     padding: 5px;
     margin: 5px;
     border: 1px solid lightgray;
@@ -386,7 +390,7 @@
     background-color: white;
 }
 
-.layer-switcher li input:checked + label {
+#map .layer-switcher li input:checked + label {
     text-shadow:0px 0px 1px black;
 }
 
